==> gnasour/PulseOx_I2C/MAX30102.c <==
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include "MAX30102.h"

uint16_t check(void)
{
  // Read register FIDO_DATA in (3-byte * number of active LED) chunks
  // Until FIFO_RD_PTR = FIFO_WR_PTR

  byte readPointer = getReadPointer();
  byte writePointer = getWritePointer();

  int numberOfSamples = 0;

  // Do we have new data?
  if (readPointer != writePointer)
  {
    // Calculate the number of readings we need to get from sensor
    numberOfSamples = writePointer - readPointer;
    if (numberOfSamples < 0)
      numberOfSamples += 32; // Wrap condition

    // We now have the number of readings, now calc bytes to read
    // For this example we are just doing Red and IR (3 bytes each)
    int bytesLeftToRead = numberOfSamples * activeLEDs * 3;

    // Get ready to read a burst of data from the FIFO register
    //  _i2cPort->beginTransmission(MAX30102_ADDRESS);
    //  _i2cPort->write(MAX30102_FIFODATA);
    //  _i2cPort->endTransmission();
    i2c_write_blocking(_i2cPort, _i2caddr, &MAX30102_FIFODATA, 1, true);

    // We may need to read as many as 192 bytes so we read in blocks no larger than I2C_BUFFER_LENGTH
    // Wire.requestFrom() is limited to BUFFER_LENGTH which is 32 on the Uno
    while (bytesLeftToRead > 0)
    {
      int toGet = bytesLeftToRead;
      if (toGet > I2C_BUFFER_LENGTH)
      {
        // If toGet is 32 this is bad because we read 6 bytes (Red+IR * 3 = 6) at a time
        // 32 % 6 = 2 left over. We don't want to request 32 bytes, we want to request 30.
        // 32 % 9 (Red+IR+GREEN) = 5 left over. We want to request 27.

        toGet = I2C_BUFFER_LENGTH - (I2C_BUFFER_LENGTH % (activeLEDs * 3)); // Trim toGet to be a multiple of the samples we need to read
      }

      bytesLeftToRead -= toGet;

      // Request toGet number of bytes from sensor
      uint8_t readByteStream[I2C_BUFFER_LENGTH];
      i2c_read_burst_blocking(_i2cPort, _i2caddr, readByteStream, toGet);

      while (toGet > 0)
      {
        sense.head++;               // Advance the head of the storage struct
        sense.head %= STORAGE_SIZE; // Wrap condition

        byte temp[sizeof(uint32_t)]; // Array of 4 bytes that we will convert into long
        uint32_t tempLong;

        // Burst read three bytes - RED
        temp[3] = 0;
        temp[2] = readByteStream[0];
        temp[1] = readByteStream[1];
        temp[0] = readByteStream[2];

        // Convert array to long
        memcpy(&tempLong, temp, sizeof(tempLong));
        tempLong &= 0x3FFFF; // Zero out all but 18 bits
        sense.red[sense.head] = tempLong; //Store this reading into the sense array

        if (activeLEDs > 1)
        {
          // Burst read three more bytes - IR
          temp[3] = 0;
          temp[2] = readByteStream[3];
          temp[1] = readByteStream[4];
          temp[0] = readByteStream[5];

          // Convert array to long
          memcpy(&tempLong, temp, sizeof(tempLong));
          tempLong &= 0x3FFFF; // Zero out all but 18 bits
          sense.IR[sense.head] = tempLong;
        }

        toGet -= activeLEDs * 3;
      }

    } // End while (bytesLeftToRead > 0)

  } // End readPtr != writePtr

  return (numberOfSamples); // Let the world know how much new data we found
}

uint8_t readRegister8(uint8_t address, uint8_t reg)
{
  uint8_t readByte;
  i2c_write_blocking(_i2cPort, _i2caddr, &reg, 1, true);
  i2c_read_blocking(_i2cPort, _i2caddr, &readByte, 1, false);
  return readByte;
}

void writeRegister8(uint8_t address, uint8_t reg, uint8_t value)
{
  uint8_t writePacket[2];
  writePacket[0] = reg;
  writePacket[1] = value;
  i2c_write_blocking(_i2cPort, _i2caddr, writePacket, 2, false);
}
