==> gnasour/ESP32S3_PulseOx/main/MAX30102.c <==
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "esp_log.h"
#include "driver/i2c_master.h"
#include "esp_timer.h"
#include "MAX30102.h"
#define MAX_BRIGHTNESS 255

uint16_t check(void)
{
  // Read register FIDO_DATA in (3-byte * number of active LED) chunks
  // Until FIFO_RD_PTR = FIFO_WR_PTR

  byte readPointer = getReadPointer();
  byte writePointer = getWritePointer();

  int numberOfSamples = 0;

  // Do we have new data?
  if (readPointer != writePointer)
  {
    // Calculate the number of readings we need to get from sensor
    numberOfSamples = writePointer - readPointer;
    if (numberOfSamples < 0)
      numberOfSamples += 32; // Wrap condition

    // We now have the number of readings, now calc bytes to read
    // For this example we are just doing Red and IR (3 bytes each)
    int bytesLeftToRead = numberOfSamples * activeLEDs * 3;

    // We may need to read as many as 192 bytes so we read in blocks no larger than I2C_BUFFER_LENGTH
    // Wire.requestFrom() is limited to BUFFER_LENGTH which is 32 on the Uno
    while (bytesLeftToRead > 0)
    {
      int toGet = bytesLeftToRead;
      if (toGet > I2C_BUFFER_LENGTH)
      {
        // If toGet is 32 this is bad because we read 6 bytes (Red+IR * 3 = 6) at a time
        // 32 % 6 = 2 left over. We don't want to request 32 bytes, we want to request 30.
        // 32 % 9 (Red+IR+GREEN) = 5 left over. We want to request 27.

        toGet = I2C_BUFFER_LENGTH - (I2C_BUFFER_LENGTH % (activeLEDs * 3)); // Trim toGet to be a multiple of the samples we need to read
      }

      bytesLeftToRead -= toGet;

      // Request toGet number of bytes from sensor
      uint8_t readByteStream[I2C_BUFFER_LENGTH];
      i2c_read_burst_blocking(g_dev_handle, MAX30102_FIFODATA, readByteStream, toGet);

      while (toGet > 0)
      {
        sense.head++;               // Advance the head of the storage struct
        sense.head %= STORAGE_SIZE; // Wrap condition

        byte temp[sizeof(uint32_t)]; // Array of 4 bytes that we will convert into long
        uint32_t tempLong;

        // Data pointer to transmit
        uint32_t data[2];

        // Burst read three bytes - RED
        temp[3] = 0;
        temp[2] = readByteStream[0];
        temp[1] = readByteStream[1];
        temp[0] = readByteStream[2];

        // Convert array to long
        memcpy(&tempLong, temp, sizeof(tempLong));
        tempLong &= 0x3FFFF; // Zero out all but 18 bits
        // sense.red[sense.head] = tempLong; //Store this reading into the sense array
        data[0] = tempLong;

        if (activeLEDs > 1)
        {
          // Burst read three more bytes - IR
          temp[3] = 0;
          temp[2] = readByteStream[3];
          temp[1] = readByteStream[4];
          temp[0] = readByteStream[5];

          // Convert array to long
          memcpy(&tempLong, temp, sizeof(tempLong));
          tempLong &= 0x3FFFF; // Zero out all but 18 bits
          // sense.IR[sense.head] = tempLong;
          data[1] = tempLong;
        }

        transmitData(data);

        toGet -= activeLEDs * 3;
      }

    } // End while (bytesLeftToRead > 0)

  } // End readPtr != writePtr

  return (numberOfSamples); // Let the world know how much new data we found
}

uint8_t readRegister8(uint8_t address, uint8_t reg)
{
  uint8_t data = 0;
  ESP_ERROR_CHECK(i2c_master_transmit_receive(g_dev_handle, &reg, 1, &data, 1, I2C_MASTER_TIMEOUT_MS / portTICK_PERIOD_MS));
  return data;
}

void writeRegister8(uint8_t address, uint8_t reg, uint8_t value)
{
  uint8_t write_buf[2] = {reg, value};
  ESP_ERROR_CHECK(i2c_master_transmit(g_dev_handle, write_buf, sizeof(write_buf), I2C_MASTER_TIMEOUT_MS / portTICK_PERIOD_MS));
}
